--- a/app/src/main/res/layout/custom_rating_layout.xml
+++ b/app/src/main/res/layout/custom_rating_layout.xml
@@ -32,6 +32,18 @@
             android:id="@+id/rate_bar"
             android:layout_marginVertical="10dp"/>
 
+        <TextView
+            android:id="@+id/already_reviewed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:paddingHorizontal="30dp"
+            android:text="Already rated!"
+            android:textColor="@color/white"
+            android:textSize="15sp"
+            android:visibility="gone" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
