--- a/app/src/main/res/drawable/rounded_rect_white.xml
+++ b/app/src/main/res/drawable/rounded_rect_white.xml
@@ -6,7 +6,7 @@
             android:shape="rectangle"
 
             >
-            <solid android:color="@color/colorPrimaryVariant2"/>
+            <solid android:color="#E4E4E4"/>
             <corners android:radius="15dp"/>
 
         </shape>
