--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -94,7 +94,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@id/setTime"
-                    android:layout_marginVertical="5dp"
+                    android:layout_marginVertical="15dp"
+                    android:paddingVertical="5dp"
+                    android:background="@drawable/spinner_bg"
+
                     />
 
                 <Button
@@ -120,7 +123,9 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/textViewType">
+                    app:layout_constraintTop_toBottomOf="@id/textViewType"
+
+                    >
 
                     <RadioButton
                         android:id="@+id/radio_type1"
@@ -237,6 +242,8 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="Type"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/location_list" />
@@ -249,6 +256,8 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:text="Size"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/types" />
