--- a/app/src/main/res/layout/custom_photo_layout.xml
+++ b/app/src/main/res/layout/custom_photo_layout.xml
@@ -23,14 +23,24 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="250dp"
-            android:layout_height="400dp"
-            android:id="@+id/chosen_photo_container"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginVertical="10dp"
-            android:src="@drawable/baseline_add_photo_alternate_24"
-            />
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_margin="8dp"
+            android:layout_gravity="center"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="10dp"
+            app:cardBackgroundColor="@color/colorPrimaryVariant">
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="400dp"
+                android:id="@+id/chosen_photo_container"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginVertical="10dp"
+                android:src="@drawable/baseline_add_photo_alternate_24"
+                />
+        </androidx.cardview.widget.CardView>
 
         <ProgressBar
             android:layout_width="280dp"
@@ -38,7 +48,8 @@
             android:layout_gravity="center_horizontal"
             style="@style/Widget.AppCompat.ProgressBar.Horizontal"
             android:id="@+id/progress_bar"
-            android:layout_marginVertical="5dp"
+            android:layout_marginVertical="10dp"
+
             />
 
         <LinearLayout
